restructured the folders aand files

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,29 @@
+@font-face {
+  font-family: 'Nova Mono Regular';
+  src: url('assets/fonts/NovaMono-Regular.ttf')  format('truetype');
+}
+
+
+@font-face {
+  font-family: 'Azo Sans Regular';
+  src: url('assets/fonts/AzoSans-Regular.ttf')  format('truetype');
+}
+
+@font-face {
+  font-family: 'Azo Sans Bold';
+  src: url('assets/fonts/AzoSans-Bold.otf')  format('truetype');
+}
+
+
+body {
+  margin: 0;
+  font-family: 'Nova Mono Regular', 'Azo Sans Regular', 'Azo Sans Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', 
+  'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
