--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,16 @@
-$white: white;
-$bg-dark-color: #0E1726;
+@import "~bootstrap/scss/bootstrap";
+
+$plexus-white: #E0E0E0;
+$plexus-light-white: #BDBDBD;
+$plexus-dark: #050818;
+$plexus-light-dark: #0E1726;
+$plexus-dark-blue: #191E3A;
+$plexus-light-blue: #62B0E5;
+$plexus-gray: #4F4F4F;
+$plexus-font-family: 'Azo Sans Regular';
 
 .App {
-  background-color: $bg-dark-color;
+  background-color: $plexus-dark;
   min-height: 100vh;
- min-width: 100vw;
+  min-width: 100vw;
 }
