--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -6,6 +6,8 @@
   padding: 0.6em;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  position: relative;
+  z-index: 2;
 }
 
 .address-text {
@@ -30,15 +32,21 @@
   background-color: $plexus-dark-blue;
   margin-top: 0;
   padding: 1.5em;
-  padding-left: 2em;
-  padding-right: 2.5em;
+  padding-left: 0;
+  padding-right: 0;
   padding-bottom: 4em;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  background-image: url('../../assets/Subtract.png');
+  background-size: cover;
+  position: relative;
+  z-index: 2;
 }
 
 .net-worth-row {
   padding: 1em;
+  margin-left: 1.5em;
+  width: calc(100% - 45px);
   border-radius: 10px;
   background-color: $plexus-light-dark;
 }
@@ -70,11 +78,39 @@
 }
 
 .description-row {
-  padding-left: 1em;
-  margin-top: 3.5em;
+  margin-top: 4.0em;
 }
 
 .caret-down {
   color: $plexus-light-blue;
   margin-left: 5px;
+}
+
+.description-part {
+  border: 1px solid;
+  border-left: none;
+  width: 60px;
+  border-color: #7AC2E8;
+  margin-left: -30px;
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
+
+.description-yield {
+  margin-top: 13.0em;
+}
+
+.grid-cell {
+  width: 72px;
+  height: 72px;
+  border: 1px solid;
+  border-color: #426375;
+}
+
+.table-grid {
+  position: absolute;
+  right: 40px;
+  top: 50px;
+  width: 90%;
+  z-index: 0;
 }
