implement yield aggregator sidebar (#33)
* implement yield aggregator sidebar

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ $plexus-font-family: 'Azo Sans Regular';
 $white: white;
 $bg-dark-color: #050818;
 $plexus-currency-font: 'Nova Mono Regular';
+$plexus-light-gray: #828282;
 
 .App {
   background-color: $plexus-dark;
