--- a/src/index.scss
+++ b/src/index.scss
@@ -14,10 +14,15 @@
   src: url('assets/fonts/AzoSans-Bold.otf')  format('truetype');
 }
 
+@font-face {
+  font-family: 'CODEINK Regular';
+  src: url('assets/fonts/CODEINK-Regular.ttf')  format('truetype');
+}
+
 
 body {
   margin: 0;
-  font-family: 'Nova Mono Regular', 'Azo Sans Regular', 'Azo Sans Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', 
+  font-family: 'Nova Mono Regular', 'Azo Sans Regular', 'Azo Sans Bold', 'CODEINK Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', 
   'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
