--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -68,6 +68,14 @@
   line-height: 24px;
 }
 
+.subtitle-text-white {
+  color: $plexus-white;
+  font-weight: 600;
+  font-family: $plexus-font-family;
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .description-text {
   color: $plexus-light-white;
   font-weight: 600;
@@ -75,10 +83,15 @@
   font-size: 13px;
   line-height: 24px;
   word-break: break-all;
+  margin-top: 10px;
 }
 
 .description-row {
   margin-top: 4.0em;
+}
+
+.mt-6e {
+  margin-top: 6.0em;
 }
 
 .caret-down {
