--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -298,3 +298,26 @@
     color: $plexus-light-white;
   }
 }
+.lend-borrow-sidebar {
+  .subtitle-text-white {
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 34px;
+    align-items: center;
+    font-family: $plexus-font-family;
+    letter-spacing: 0.1em;
+  }
+  .subtitle-text-gradient {
+    background: linear-gradient(270deg, #7AC2E8 0%, #236EDC 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .description-text {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    font-family: $plexus-font-family;
+    color: #F2F2F2;
+  }
+}
