--- a/src/components/liquidity-positions/index.scss
+++ b/src/components/liquidity-positions/index.scss
@@ -16,7 +16,12 @@
     font-family: $plexus-font-family;
     cursor: pointer;
 }
+.asset_div.active {
+  background-color: transparent !important;
+  border: 1px solid #4ea4d3 ;
+  border-radius: 10px;
 
+}
 .table_col_first {
     background-color: #0E1726 !important;
     border-radius: 10px 0 0 10px;
