--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -15,9 +15,9 @@
   color: $plexus-white;
   font-family: 'Nova Mono Regular';
   font-weight: 400;
-  font-size: 0.8em;
-  line-height: 36px;
-  letter-spacing: 1px;
+  font-size: 0.9em;
+  // line-height: 36px;
+  letter-spacing: 1.5px;
 }
 
 .net-worth-label {
@@ -66,26 +66,29 @@
   color: $plexus-light-blue;
   font-weight: 600;
   font-family: $plexus-font-family;
-  font-size: 0.9em;
+  font-size: 1.2em;
   line-height: 24px;
+  letter-spacing: 2px;
 }
 
 .subtitle-text-white {
   color: $plexus-white;
   font-weight: 600;
   font-family: $plexus-font-family;
-  font-size: 1.0em;
+  font-size: 1.2em;
   line-height: 24px;
+  letter-spacing: 2px;
 }
 
 .description-text {
   color: $plexus-light-white;
-  font-weight: 600;
+  font-weight: 500;
   font-family: $plexus-font-family;
-  font-size: 0.65em;
+  font-size: 0.85em;
   line-height: 24px;
-  word-break: break-all;
+  // word-break: break-all;
   margin-top: 10px;
+  letter-spacing: 0.8px;
 }
 
 .description-row {
@@ -150,13 +153,14 @@
   color: $plexus-light-blue;
   font-weight: 600;
   font-family: $plexus-font-family;
-  font-size: 1.0em;
+  font-size: 1.2em;
   line-height: 36px;
+  letter-spacing: 2px;
 }
 
 .yield-info-box {
   padding: 0.5em;
-  padding-left: 1em;
+  // padding-left: 1em;
   width: 100%;
   border-radius: 5px;
   background-color: $plexus-light-dark;
@@ -166,8 +170,8 @@
   color: $plexus-white;
   font-family: $plexus-font-family;
   font-weight: 400;
-  font-size: 0.7em;
-  line-height: 36px;
+  font-size: 0.9em;
+  // line-height: 36px;
   letter-spacing: -0.02em;
 }
 
@@ -175,25 +179,25 @@
   color: $plexus-white;
   font-family: $plexus-currency-font;
   font-weight: 400;
-  font-size: 0.8em;
-  line-height: 36px;
-  letter-spacing: -0.05em;
+  font-size: 0.9em;
+  // line-height: 36px;
+  letter-spacing: -0.02em;
 }
 
 .yield-personal-info-title-text {
   color: $plexus-white;
   font-family: $plexus-font-family;
-  font-weight: 600;
-  font-size: 0.8em;
+  // font-weight: 600;
+  font-size: 0.9em;
   line-height: 36px;
-  letter-spacing: -0.02em;
+  letter-spacing: 0.02em;
 }
 
 .yield-personal-info-value-text {
   color: $plexus-light-gray;
   font-family: $plexus-currency-font;
   font-weight: 400;
-  font-size: 0.8em;
+  font-size: 0.9em;
   line-height: 36px;
   letter-spacing: -0.05em;
   float: right;
@@ -217,19 +221,20 @@
     
     border-radius: 5px;
     background: $plexus-dark;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    // padding-left: 0.8em;
+    // padding-right: 0.8em;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
     font-family: $plexus-font-family;
-    font-weight: 600;
-    font-size: 0.63em;
+    // font-weight: 600;
+    font-size: 0.83em;
     color: #F2F2F2;
     width: 33%;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    letter-spacing: -0.02em;
   }
 
   .yield-action-button-text-box.active {
@@ -242,31 +247,32 @@
   color: $plexus-light-white;
   font-family: $plexus-font-family;
   font-style: normal;
-  font-weight: 600;
-  font-size: 0.7em;
+  // font-weight: 600;
+  font-size: 0.8em;
   letter-spacing: 0.02em; 
 }
 
 .approve-button {
   font-style: normal;
-  font-weight: 600;
-  font-size: 0.7em;
+  // font-weight: 600;
+  font-size: 0.9em;
   line-height: 36px;
   font-family: $plexus-font-family;
   color: $plexus-white;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
+  // padding-left: 1.5em;
+  // padding-right: 1.5em;
   padding-top: 0.5em;
   padding-bottom:0.5em;
   border-radius: 10px;
   background-color: #236EDC;
   text-align: center;
+  letter-spacing: 1px;
 }
 
 .comment {
   font-style: normal;
-  font-weight: 600;
-  font-size: 0.7em;
+  // font-weight: 600;
+  font-size: 0.75em;
   line-height: 17px;
   font-family: $plexus-font-family;
   align-items: center;
@@ -298,7 +304,7 @@
     color: $plexus-white;
     background-color: transparent;
     border: none;
-    width: 80%;
+    width: 78%;
   }
 
   .value-input-text:focus {
@@ -324,7 +330,7 @@
     line-height: 34px;
     align-items: center;
     font-family: $plexus-font-family;
-    letter-spacing: 0.1em;
+    letter-spacing: 2px;
   }
 
   .subtitle-text-gradient {
@@ -498,4 +504,12 @@ opacity: 0.3;
     color: $link-hover-color;
     text-decoration: $link-hover-decoration;
   }
+}
+
+.w-30 {
+  width: 30%;
+}
+
+.w-40 {
+  width: 40%;
 }
