--- a/src/components/sidebar/rewards/index.scss
+++ b/src/components/sidebar/rewards/index.scss
@@ -34,6 +34,7 @@
     font-weight: 600;
     font-family: $plexus-font-family;
     font-size: 1.4em;
+    letter-spacing: 3px;
     // line-height: 36px;
   }
 
